--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -1,13 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{title}}</title>
-</head>
-<body>
-    <p>{{menu}}</p>
-    <h1>{{title}}</h1>
-    <p>{{title}}</p>
-</body>
-</html>
+
+{% extends 'base.html' %}
+{% block content %}    
+
+<p>some text abot us</p>
+
+{% endblock %}
