add all static create user tags and other

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1,40 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{title}}</title>
-</head>
-<body>
-    <ul>
-        <li><a href="{% url 'home' %}">Main page</a></li>
-        {% for el in menu %}
-            <li>
-                <a href="{% url el.url_name %}">{{el.name}}</a>
-            </li>
-        {% endfor %}
-    </ul>
-    <h1>{{title}}</h1>
-    <p>{{title}}</p>
+{% extends 'base.html' %}
 
-    {% include 'main/includes/nav.html' %}
-
-    <ul>
-        {% for p in posts %}
-            {% if p.is_published %}
-                <li>
-                    <h2>{{p.name}}</h2>
-                    <p>{{p.desc}}</p>
-                    <p><a href="{% url 'post' p.id %}">Show more</a></p>
-                    {% if not forloop.last %}
-                        <hr>
-                    {% endif %}
-                </li>
-            {% endif %}
-        {% endfor %}
-    </ul>
-
-    {% include 'main/includes/nav.html' %}
-
-</body>
-</html>
+{% block content %}
+<ul class="list-articles">
+	{% for p in posts %}
+		{% if p.is_active %}
+				<li><h2>{{p.title}}</h2>
+		{{p.content|linebreaks|truncatewords:40}}
+				<div class="clear"></div>
+				<p class="link-read-post"><a href="{% url 'post' p.id %}">Read post</a></p>
+				</li>
+		{% endif %}
+	{% endfor %}
+</ul>
+{% endblock %}
