--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -1,7 +1,5 @@
-
 {% extends 'base.html' %}
-{% block content %}    
 
-<p>some text abot us</p>
-
+{% block content %}
+<h1>{{title}}</h1>
 {% endblock %}
