--- a/templates/base.html
+++ b/templates/base.html
@@ -1,29 +1,72 @@
 {% load static %}
-
+{% load main_tags %}
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
+    <title>{{ title }}</title>
+    <link type="text/css" href="{% static 'main/css/styles.css' %}" rel="stylesheet" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <link rel="shortcut icon" href="{% static 'main/images/main.ico' %}" type="image/x-icon"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'main/css/styles.css' %} " type="text/css">
-    <title>{{title}}</title>
 </head>
 <body>
-    <ul>
-        <li><a href="{% url 'home' %}">Main page</a></li>
-        {% for el in menu %}
-            <li>
-                <a href="{% url el.url_name %}">{{el.name}}</a>
-            </li>
-        {% endfor %}
-    </ul>
-    <h1>{{title}}</h1>
-    <p>{{title}}</p>
+<table class="table-page" border="0" cellpadding="0" cellspacing="0">
+    <tr><td valign="top">
+    {% block mainmenu %}
+        <div class="header">
+            <ul id="mainmenu" class="mainmenu">
+                <li class="logo"><a href="{% url 'home' %}"><div class="logo"></div></a></li>
+                {% for m in menu %}
+                    {% if not forloop.last %}
+                        <li>
+                    {% else %}
+                        <li class="last">
+                    {% endif %}
+                        <a href="{% url m.url_name %}">{{ m.title }}</a>
+                    </li>
+                {% endfor %}
+            </ul>
+            <div class="clear"></div>
+        </div>
+    {% endblock mainmenu %}
 
+    <table class="table-content" border="0" cellpadding="0" cellspacing="0">
+        <tr>
+            <!-- Sidebar on the left -->
+            <td valign="top" class="left-chapters">
+                <ul id="leftchapters">
+                    <li class="selected">All Categories</li>
 
-    {% block content %}    {% endblock %}
+                    {% show_categories cat_selected %}
 
+                    <li class="share">
+                        <p>Our Channel</p>
+                        <a class="share-yt" href="https://www.youtube.com/channel/UClJzWfGWuGJL2t-3dYKcHTA/playlists" target="_blank" rel="nofollow"></a>
+                    </li>
+                </ul>
+            </td>
+            <!-- End of Sidebar -->
+            <td valign="top" class="content">
+                <!-- Breadcrumbs -->
+                {% block breadcrumbs %}
+                {% endblock %}
 
-    
+                <!-- Content block -->
+                <div class="content-text">
+                    {% block content %}
+                    {% endblock %}
+                </div>
+                <!-- End of content block -->
+            </td>
+        </tr>
+    </table>
+    </td></tr>
+    <!-- Footer -->
+    <tr><td valign="top">
+        <div id="footer">
+            <p>&copy; 2023 Partial or full copying of information from this site for distribution on other resources, including paper media, is strictly prohibited.</p>
+        </div>
+    </td></tr>
+</table>
 </body>
 </html>
