--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -3,13 +3,16 @@
 {% block content %}
 <ul class="list-articles">
 	{% for p in posts %}
-		{% if p.is_active %}
-				<li><h2>{{p.title}}</h2>
-		{{p.content|linebreaks|truncatewords:40}}
+			<li>
+				<div class="article-panel">
+					<p class="first">Category: {{p.cat.name}}</p>
+					<p class="last">date:{{ p.time_update|date:"d.m.Y H:i:s" }}</p>
+				</div>
+				<h2>{{p.title}}</h2>
+				{{p.content|linebreaks|truncatewords:40}}
 				<div class="clear"></div>
-				<p class="link-read-post"><a href="{% url 'post' p.id %}">Read post</a></p>
-				</li>
-		{% endif %}
+				<p class="link-read-post"><a href="{{ p.get_absolute_url }}">Read post</a></p>
+			</li>
 	{% endfor %}
 </ul>
 {% endblock %}
