--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
             <!-- Sidebar on the left -->
             <td valign="top" class="left-chapters">
                 <ul id="leftchapters">
-                    {% if cat_selected == 0 %}
+                    {% if cat_selected == 0 or cat_selected is none %}
                         <a href="{% url 'home' %}"><li class="selected">All Categories</li></a>
                     {% else %}
                         <a href="{% url 'home' %}"><li>All Categories</li></a>
@@ -46,6 +46,7 @@
                         <p>Our Channel</p>
                         <a class="share-yt" href="https://www.youtube.com/channel/UClJzWfGWuGJL2t-3dYKcHTA/playlists" target="_blank" rel="nofollow"></a>
                     </li>
+                    <li>{% show_all_tags %}</li>
                 </ul>
             </td>
             <!-- End of Sidebar -->
